{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "GroundMovement",
            "id": "564088ea-ba57-4e7d-b4ce-38ce4f935de1",
            "actions": [
                {
                    "name": "HorizontalMovement",
                    "type": "Button",
                    "id": "88d5baa1-71b7-42d5-ad12-7ed65727cdd8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "WSAD",
                    "id": "bf804c93-832b-4edc-a27c-64f117808ae9",
                    "path": "2DVector",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "48306b95-cfc1-42c6-8f91-99ec64a7c36a",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "a830487f-f9b3-4ac9-90a9-c803e70c9918",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "119d189d-364b-42a5-bc63-2b743dfaf493",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "1dfa13e3-650c-4b3e-9343-07b43af4e4cf",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}